<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Fragment_1">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et1"
                android:layout_width="380dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/search"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_background"
                android:inputType="text"
                />
            <Button
                android:id="@+id/bt_clothes"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:layout_below="@+id/et1"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/yigui"
                android:textSize="50sp"
                android:gravity="center"
                android:background="@drawable/clothes_bakground"
                />
            <Button
                android:id="@+id/bt_trousers"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:layout_below="@+id/bt_clothes"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/kuzi"
                android:textSize="50sp"
                android:gravity="center"
                android:background="@drawable/clothes_bakground"
                />
            <Button
                android:id="@+id/bt_shoes"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:layout_below="@+id/bt_trousers"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/xiejia"
                android:textSize="50sp"
                android:gravity="center"
                android:background="@drawable/shoes_background"
                />
            <Button
                android:id="@+id/bt_desk"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:layout_below="@+id/bt_shoes"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="食品柜"
                android:textSize="50sp"
                android:gravity="center"
                android:background="@drawable/clothes_bakground"
                />
            <Button
                android:id="@+id/bt_cosmetic"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:layout_below="@+id/bt_desk"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="箱包"
                android:textSize="50sp"
                android:gravity="center"
                android:background="@drawable/pants_background"
                />
            <Button
                android:id="@+id/bt_dailyuse"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:layout_below="@+id/bt_cosmetic"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="杂物柜"
                android:textSize="50sp"
                android:gravity="center"
                android:background="@drawable/shoes_background"
                />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>